# anyserial

./: .actrc  .gitignore  .pre-commit-config.yaml  .secrets.example  CHANGELOG.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  docs.yml  publish.yml
benchmarks/: README.md  conftest.py  test_allocation_profile.py  test_compare_pyserial.py  test_many_ports.py  test_receive_available.py  test_roundtrip_latency.py  test_sync_vs_async.py  test_throughput.py  test_windows_throughput.py
benchmarks/hardware/: README.md  alicat_benchmark.py  alicat_demo.py
docs/: anyio-backends.md  bsd.md  cancellation.md  capabilities.md  configuration.md  darwin.md  design-windows-backend.md  discovery.md  hardware-testing.md  index.md  linux-tuning.md  migration-from-pyserial.md  performance.md  quickstart.md  rs485.md  runtime-reconfiguration.md  sync.md  troubleshooting.md  uvloop.md  windows.md
src/anyserial/: __init__.py  _types.py  capabilities.py  config.py  discovery.py  exceptions.py  stream.py  sync.py  testing.py
src/anyserial/_backend/: __init__.py  protocol.py  selector.py
src/anyserial/_bsd/: __init__.py  backend.py  baudrate.py  capabilities.py  discovery.py
src/anyserial/_darwin/: __init__.py  _iokit.py  backend.py  baudrate.py  capabilities.py  discovery.py
src/anyserial/_discovery/: __init__.py  pyserial.py  pyudev.py
src/anyserial/_linux/: __init__.py  backend.py  baudrate.py  capabilities.py  discovery.py  low_latency.py  rs485.py
src/anyserial/_mock/: __init__.py  backend.py
src/anyserial/_posix/: __init__.py  backend.py  baudrate.py  ioctl.py  termios_apply.py
src/anyserial/_windows/: __init__.py  _asyncio_io.py  _errors.py  _runtime.py  _setupapi.py  _trio_io.py  _win32.py  backend.py  baudrate.py  capabilities.py  dcb.py  discovery.py
tests/: conftest.py
tests/hardware/: test_discovery_ftdi.py  test_ftdi_low_latency.py  test_rs485_adapter.py
tests/integration/: conftest.py  test_linux_backend.py  test_linux_discovery.py  test_linux_low_latency.py  test_linux_rs485.py  test_open_serial_port.py  test_open_serial_port_info.py  test_posix_backend.py  test_posix_ioctl.py  test_receive_syscall_budget.py  test_serial_port_pty.py  test_sync_pty.py  test_windows_backend.py
tests/property/: test_portinfo.py
tests/typing_checks/: test_public_api.py  test_sync_api.py
tests/unit/: test_async_backend_dispatch.py  test_backend_protocol.py  test_bsd_backend.py  test_bsd_baudrate.py  test_bsd_capabilities.py  test_bsd_discovery.py  test_capabilities.py  test_config.py  test_darwin_backend.py  test_darwin_baudrate.py  test_darwin_capabilities.py  test_darwin_discovery.py  test_discovery.py  test_discovery_pyserial.py  test_discovery_pyudev.py  test_exceptions.py  test_linux_backend_low_latency.py  test_linux_baudrate.py  test_linux_capabilities.py  test_linux_discovery.py  test_linux_low_latency.py  test_linux_rs485.py  test_mock_backend.py  test_package.py  test_port_info_attribute.py  test_posix_baudrate.py  test_posix_ioctl.py  test_stream.py  test_sync.py  test_sync_parity.py  test_termios_apply.py  test_types.py  test_windows_capabilities.py  test_windows_comm_event.py  test_windows_dcb.py  test_windows_discovery.py  test_windows_errors.py  test_windows_handle_wrapper.py  test_windows_runtime.py  test_windows_setupapi.py  (+1 more)
