[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "anyserial"
dynamic = ["version"]
description = "Low-latency async serial I/O for Python, built on AnyIO."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Grayson Bellamy", email = "gbellamy@umd.edu" },
]
keywords = ["serial", "tty", "uart", "async", "anyio", "rs232", "rs485"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Hardware",
    "Topic :: Terminals :: Serial",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.13",
]

[project.urls]
Homepage = "https://github.com/GraysonBellamy/anyserial"
Documentation = "https://anyserial.graysonbellamy.dev/"
Repository = "https://github.com/GraysonBellamy/anyserial"
Issues = "https://github.com/GraysonBellamy/anyserial/issues"
Changelog = "https://github.com/GraysonBellamy/anyserial/blob/main/CHANGELOG.md"

[project.optional-dependencies]
uvloop = ["uvloop>=0.22.1; platform_system == 'Linux' or platform_system == 'Darwin'"]
winloop = ["winloop>=0.1.1; platform_system == 'Windows'"]
trio = ["trio>=0.27"]
discovery-pyudev = ["pyudev>=0.24; platform_system == 'Linux'"]
discovery-pyserial = ["pyserial>=3.5"]

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/anyserial/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/anyserial",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "DESIGN.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anyserial"]

# ---------------------------------------------------------------------------
# uv — dependency groups (PEP 735)
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "docs" },
    "pre-commit>=4.0",
    "pyserial-asyncio>=0.6",
    "uvloop>=0.22.1; platform_system == 'Linux' or platform_system == 'Darwin'",
    "winloop>=0.1.1; platform_system == 'Windows'",
]
lint = [
    "ruff>=0.8",
]
type = [
    "mypy>=1.13",
    "pyright>=1.1.390",
    # Optional discovery extras pulled in so mypy raises a consistent
    # `import-untyped` (rather than `import-not-found`) for both the
    # local and CI typecheck environments. Lets the targeted ignore in
    # _discovery/{pyudev,pyserial}.py stay precise.
    "pyudev>=0.24; platform_system == 'Linux'",
    "pyserial>=3.5",
]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "coverage[toml]>=7.13.5",
    # Cap below 6.156: that release added a mandatory Rust/pyo3 extension
    # shipped only as cp3xx-abi3 wheels. The stable-ABI wheel can't load on
    # free-threaded CPython, so on 3.13t uv falls back to the sdist and the
    # build fails — pyo3 <0.30 refuses to compile against free-threaded
    # CPython <3.14. Lift once hypothesis ships free-threaded wheels (or
    # makes the Rust core optional) so the advisory 3.13t CI job stays green.
    "hypothesis>=6.120,<6.157",
    "trio>=0.27",
]
bench = [
    "pytest-benchmark>=4.0",
]
docs = [
    "zensical>=0.0.33",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["src/anyserial/_version.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PL",   # pylint
    "RUF",  # ruff-specific
    "PTH",  # flake8-use-pathlib
    "TC",   # flake8-type-checking (was TCH)
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "N",    # pep8-naming
    "D",    # pydocstyle
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
]
ignore = [
    "D203",    # 1 blank line before class (conflicts with D211)
    "D213",    # multi-line summary second line (conflicts with D212)
    "D107",    # missing docstring in __init__
    "PLR0913", # too many arguments
    "S101",    # assert used — fine in tests
    "ANN401",  # Any in annotations — sometimes legitimate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",       # docstrings not required in tests
    "ANN",     # annotations not required in tests
    "PLR2004", # magic values are fine in tests
    "S",       # bandit rules relaxed in tests
]
"benchmarks/**" = ["D", "ANN", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

# ---------------------------------------------------------------------------
# mypy — strict
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.13"
# Pin the analysis platform so mypy results are reproducible regardless of
# the host the developer (or pre-push hook) runs on. CI's typecheck job
# runs on Linux; without this pin, running mypy on Windows or macOS
# rewrites every ``sys.platform`` branch and produces a different error
# set (e.g. Linux-only ``termios`` calls and Darwin/BSD backends look
# "unreachable" on Windows). Windows-specific code is exercised by the
# Windows CI job and by Windows-host tests at runtime, not by mypy.
platform = "linux"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "unused-awaitable",
    "possibly-undefined",
]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = ["src", "tests"]
exclude = ["src/anyserial/_version.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# pyudev is a Linux-only optional dep (declared via ``platform_system ==
# 'Linux'`` markers). Its ``import-untyped`` / ``import-not-found`` state
# depends on whether the developer's host is Linux. Treat it as ``Any``
# either way so the lazy import in ``_discovery/pyudev.py`` does not need
# host-specific ``# type: ignore`` codes.
[[tool.mypy.overrides]]
module = "pyudev"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pyright — secondary type checker
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src", "tests"]
exclude = ["src/anyserial/_version.py", "**/__pycache__"]
pythonVersion = "3.13"
# Pin the analysis platform — CI runs pyright on Ubuntu, so without this
# every developer running ``uv run pyright`` on Windows or macOS gets a
# different error set (e.g. Linux-only ``termios`` constants flagged as
# unknown). Mirrors ``[tool.mypy].platform``.
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
    # Hardware tests are opt-in: every collection still walks them so
    # broken syntax / imports surface, but they are deselected unless
    # the caller passes `-m hardware` (which overrides this default —
    # only the last `-m` on the effective command line applies).
    "-m",
    "not hardware",
]
xfail_strict = true
markers = [
    "hardware: tests that require real serial hardware (opt-in; set ANYSERIAL_TEST_PORT)",
    "slow: tests that are slow (>1s)",
    "windows_virtual_serial: tests that require a com0com virtual COM-port pair (Windows + opt-in via ANYSERIAL_WINDOWS_PAIR=COMA,COMB)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:anyio.*",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source_pkgs = ["anyserial"]
branch = true
parallel = true
omit = [
    "src/anyserial/_version.py",
]

[tool.coverage.paths]
anyserial = ["src/anyserial", "*/anyserial/src/anyserial"]

[tool.coverage.report]
show_missing = true
precision = 2
skip_covered = false
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@overload",
    "@abstractmethod",
    "\\.\\.\\.",
]
